# psoc-experiments

./: .gitignore  AGENTS.md  README.md  board-status-brief.org  bringup.org  quickstart.org  runtime-processes.org
console-echo/: Cargo.toml  build.rs  connect.gdb
console-echo/src/: main.rs  micro_sd.rs
lisp-psoc-pc/: .gitignore  Cargo.toml  build.rs
lisp-psoc-pc/src/: lisp.rs  lisp_fat.rs  lisp_store.rs  main.rs  micro_sd.rs  wifi_credentials.rs  wifi_resources.rs
lisp-psoc-pc/src/hal/: board.rs  console.rs  micro_sd.rs  mod.rs  thermistor.rs  wifi_sdio.rs
morse-code/: Cargo.toml  PSoC_62.yaml  build.rs  memory.x
morse-code/src/: main.rs
morse-code2/: Cargo.toml
morse-code2/src/: main.rs  morse_encoding.rs
probe-rs-targets/: PSoC_62.probe-rs-0.30.yaml
psoc6-cm0-bootloader/: README.md
psoc6-cm0-bootloader/src/: main.rs
tools/: build-flash-lisp.scm  build-lisp.scm  flash-lisp.scm  prepare-wifi-credential-blobs.scm  prepare-wifi-credentials.scm  prepare-wifi-resources.scm  psoc-common.scm  send-lisp.scm  send-net-repl.scm  send-wifi-join.scm  serial-console.scm  setup-modustoolbox.scm
